--- a/django-cms-multi.yaml
+++ b/django-cms-multi.yaml
@@ -319,6 +319,13 @@ resources:
       - addresses: { get_attr: [django_setup, privateIPv4] }
         port: 80
         condition: ENABLED
+      healthMonitor:
+        type: HTTP
+        delay: 10
+        timeout: 5
+        attemptsBeforeDeactivation: 2
+        path: /
+        statusRegex: ^[234]0[0-2]$
       port: 80
       protocol: HTTP
       algorithm: ROUND_ROBIN
