--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -1,8 +1,8 @@
 schema-version: 1.0.0
 application-family: CMS
-application-name: Django CMS
+application-name: Django
 application-version: "3.0"
-flavor: Multiple Linux servers
+flavor: Multiple Linux servers running django CMS
 flavor-weight: 1
 reach-info:
   icon-20x20: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/django-icon-20x20.png
