--- a/django-cms-single.yaml
+++ b/django-cms-single.yaml
@@ -163,7 +163,7 @@ parameters:
 
 resources:
   django_server:
-    type: "Rackspace::Cloud::Server"
+    type: "OS::Nova::Server"
     properties:
       name: { get_param: server_hostname }
       flavor: { get_param: flavor }
@@ -178,7 +178,7 @@ resources:
     properties:
       username: root
       private_key: { get_param: private_key }
-      host: { get_attr: [django_server, accessIPv4] }
+      host: { get_attr: [django_server, networks, private, 0] }
       kitchen: { get_param: kitchen }
       chef_version: { get_param: chef_version }
       node:
@@ -206,7 +206,7 @@ resources:
 outputs:
 
   privateIPv4:
-    value: { get_attr: [django_server, privateIPv4] }
+    value: { get_attr: [django_server, networks, private, 0] }
 
   accessIPv4:
     value: { get_attr: [django_server, accessIPv4] }
