--- a/django-cms-multi.yaml
+++ b/django-cms-multi.yaml
@@ -316,7 +316,7 @@ resources:
     properties:
       name: { get_param: load_balancer_hostname }
       nodes:
-      - addresses: { get_attr: [django_setup, privateIPv4] }
+      - addresses: { get_attr: [django_setup, networks, private, 0] }
         port: 80
         condition: ENABLED
       healthMonitor:
