--- a/django-cms-multi.yaml
+++ b/django-cms-multi.yaml
@@ -239,7 +239,7 @@ parameters:
     label: Child Template
     description: Location of child template
     type: string
-    default: https://raw.githubusercontent.com/rackspace-orchestration-templates/django-cms-clouddb/master/django-cms-single.yaml
+    default: https://raw.githubusercontent.com/rackspace-orchestration-templates/django-cms-clouddb/nova/django-cms-single.yaml
 
 resources:
   # SSH keys
@@ -316,7 +316,7 @@ resources:
     properties:
       name: { get_param: load_balancer_hostname }
       nodes:
-      - addresses: { get_attr: [django_setup, networks, private, 0] }
+      - addresses: { get_attr: [django_setup, privateIPv4] }
         port: 80
         condition: ENABLED
       healthMonitor:
