Add description to metadata file and update build status badge

--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -56,3 +56,11 @@ instructions: |
   as well as [Windows using
   PuTTY](http://www.rackspace.com/knowledge_center/article/logging-in-with-a-ssh-private-key-on-windows).
 user-input-required: true
+description: |
+  Load Balanced Linux servers running [Django](http://djangoproject.com)
+  with [Django-CMS](http://django-cms.org) installed into a
+  [Python](http://python.org)
+  [Virtual Environment](http://virutalenv.org) running behind
+  [Apache](http://httpd.apache.org/) with
+  [mod_wsgi](http://code.google.com/p/modwsgi/).
+  The backend is a Cloud Database running [MySQL](http://www.mysql.com/.
